--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.9.0",
     "motion": "^12.23.12",
     "pdfjs-dist": "^5.4.54",
     "react": "^19.1.1",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^19.1.1",
     "react-pdf": "^10.1.0",
     "react-scripts": "5.0.1",
