--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sparkcu",
   "version": "0.1.0",
+  "homepage": "/cuSpark",
   "private": true,
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.15.1",
@@ -15,6 +16,7 @@
     "react-d3-tree": "^3.6.6",
     "react-dom": "^19.1.1",
     "react-pdf": "^10.1.0",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
