--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "d3": "^7.9.0",
+    "firebase": "^12.1.0",
     "motion": "^12.23.12",
     "pdfjs-dist": "^5.3.93",
     "react": "^18.3.1",
