--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@use-gesture/react": "^10.3.1",
     "d3": "^7.9.0",
     "firebase": "^12.1.0",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "motion": "^12.23.12",
     "pdfjs-dist": "^5.3.93",
     "react": "^18.3.1",
