--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@use-gesture/react": "^10.3.1",
+    "canvas-confetti": "^1.9.3",
     "d3": "^7.9.0",
     "firebase": "^12.1.0",
     "gsap": "^3.13.0",
