--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "motion": "^12.23.12",
+    "ogl": "^1.0.11",
     "pdfjs-dist": "^5.3.93",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.6",
