feat: Enhance SEO and user experience by adding structured data, SEO components, and generating sitemap; update 404 and homepage metadata

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "cuSpark",
-  "name": "cuSpark - University Competition Platform",
+  "short_name": "CuSpark",
+  "name": "CuSpark - University Competition Platform",
   "description": "Official platform for cuSpark Ideathon 2025-26 - University Competition & Events",
   "icons": [
     {
