--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "cuSpark",
-  "name": "cuSpark - University Competition Platform",
+  "short_name": "CuSpark",
+  "name": "CuSpark - University Competition Platform",
   "description": "Official platform for cuSpark Ideathon 2025-26 - University Competition & Events",
   "icons": [
     {
